--- a/plannr2.0/public/index.html
+++ b/plannr2.0/public/index.html
@@ -27,6 +27,7 @@
     <title></title>
   </head>
   <body>
+    <link rel="style" href="../src/styles/electron.css" />
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
